--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,12 @@ body {
     text-wrap: balance;
   }
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
